--- a/setup.cfg
+++ b/setup.cfg
@@ -1,11 +1,18 @@
 [metadata]
 name = ukraine-war-map-twitter-bot
 author = Will Bradley
+
 [options]
 package_dir =
     = src
 packages = find:
 python_requires = >=3.10
+install_requires = 
+    requests
+    tweepy
+    cairosvg
+    pillow
+    bs4
 
 [options.packages.find]
 where = src
