add new dependencies

--- a/setup.cfg
+++ b/setup.cfg
@@ -13,6 +13,9 @@ install_requires =
     cairosvg
     pillow
     bs4
+    matplotlib
+    shapely
+    svgpath2mpl
 
 [options.packages.find]
 where = src
